# HH_project_OOP

./: .gitignore  README.MD  config.py  main.py  pyproject.toml
data/: vacancies.json
src/: API_HH.py  main.py  vacancies.py  vacancies_file.py  vacancies_filter.py  vacancies_list.py
tests/: conftest.py  test_API_HH.py  test_vacancies.py  test_vacancies_file.py  test_vacancies_filter.py  test_vacancies_list.py
