[tool.poetry]
name = "hh-project-oop"
version = "0.1.0"
description = ""
authors = ["Irina Prokopova <irina-prokopova.style@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
flake8 = "^7.1.1"


[tool.poetry.group.lint.dependencies]
mypy = "^1.11.1"
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
